<resources>
    <string name="app_name">NowA</string>
    <string name="action_settings">Settings</string>
    <string name="add_comment">Escreva para uma turma</string>
    <string name="followers">Seguidores:</string>
    <string name="user_data">Dados do Usuário:</string>
    <string name="course">Curso:</string>
    <string name="register_number">Matrícula:</string>
    <string name="user">Usuário:</string>
    <string name="description">Descrição:</string>
    <string name="email">Email:</string>
    <string name="close">Fechar</string>
    <string name="title_activity_self_registering">SelfRegisteringActivity</string>
    <string name="hello_world">Hello world!</string>

    <color name="bg_color">#A183E2</color>
    <color name="btn_bg_color">#4B2F7B</color>
    <color name="title_color">#4B2F7B</color>
    <color name="white">#FFFFFF</color>
</resources>
